[gd_scene load_steps=8 format=1]

[ext_resource path="res://enter.gd" type="Script" id=1]
[ext_resource path="res://Audios/bgm1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Scene1/graph1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Scene2/graph2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Scene3/graph3.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Scene4/graph4.png" type="Texture" id=6]
[ext_resource path="res://gameInfo.png" type="Texture" id=7]

[node name="enter" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="background" type="ColorFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="backgroundMusic" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 2 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="toScene1" type="Button" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 55.0
margin/top = 55.0
margin/right = 787.0
margin/bottom = 481.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = true

[node name="toScene2" type="Button" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 55.0
margin/right = 1182.0
margin/bottom = 481.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = true

[node name="toScene3" type="Button" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 55.0
margin/top = 350.0
margin/right = 787.0
margin/bottom = 776.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = true

[node name="toScene4" type="Button" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 350.0
margin/right = 1182.0
margin/bottom = 776.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = true

[node name="gameInfo" type="TextureFrame" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 888.0
margin/top = 52.0
margin/right = 952.0
margin/bottom = 116.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="scene1Gems" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 75.0
margin/top = 280.0
margin/right = 129.0
margin/bottom = 294.0
text = "Gems: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="scene2Gems" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 470.0
margin/top = 280.0
margin/right = 524.0
margin/bottom = 294.0
text = "Gems: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="scene3Gems" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 75.0
margin/top = 577.0
margin/right = 129.0
margin/bottom = 591.0
text = "Gems: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="scene4Gems" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 470.0
margin/top = 577.0
margin/right = 524.0
margin/bottom = 591.0
text = "Gems: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="toScene1" to="." method="_on_toScene1_pressed"]

[connection signal="pressed" from="toScene2" to="." method="_on_toScene2_pressed"]

[connection signal="pressed" from="toScene3" to="." method="_on_toScene3_pressed"]


